[tool.poetry]
name = "python-data-structures-and-algorithms"
version = "0.1.0"
description = ""
authors = ["Peng Chen <pchen0816@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
pytest-watch = "^4.2.0"
pysnooper = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
